--- a/OrbisApp/OrbisAppTests/Info.plist
+++ b/OrbisApp/OrbisAppTests/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>bansalOrg.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.cio.orbis</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
